tests/e2e/chainsaw/10-gatewayhttpapi-sync/resources/gateway.yaml
apiVersion: formance.com/v1beta1
kind: Gateway
metadata:
  name: chainsaw-httpapi-gateway
spec:
  stack: chainsaw-httpapi-sync
  dev: true
