tests/e2e/chainsaw/10-gatewayhttpapi-sync/resources/stack.yaml
apiVersion: formance.com/v1beta1
kind: Stack
metadata:
  name: chainsaw-httpapi-sync
spec:
  version: v0.0.0-e2e
